# Agent-Project

./: .env.example  .gitignore  README.md  claude_cowork_config.json  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  candidate_ranker.py  cli.py  cowork.py  cowork_server.py  job_parser.py  linkedin_crawler.py  models.py
tests/: test_agent.py  test_candidate_ranker.py  test_job_parser.py  test_linkedin_crawler.py  test_models.py
tools/: definitions.py
